# solana-onchain-arbitrage-bot

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  package-lock.json  package.json  rustfmt.toml  tail_logs.sh
docs/: meteora-dlmm-integration.md
migrations/: 001_create_tables.sql  20250101000000_initial_schema.sql  20250123000000_add_new_tables.sql  20250823051425_create_mints_table.sql  20250823102827_create_pools_table.sql  20250823140249_drop_pool_mints_table.sql  20250825063440_create_kv_cache_table.sql  20250825095222_create_mev_simulation_log_table.sql  20250826044948_update_pools_indices.sql  20250826121846_add_simulation_fields_to_mev_log.sql  20250826122804_remove_inner_instructions_and_tx_signature.sql  20250827002748_fix_mev_simulation_log_pubkey_columns.sql  20250827122232_add_trace_to_mev_simulation_log.sql  20250828045439_add_reason_to_mev_simulation_log.sql  20250828074352_make_profitability_optional.sql  20250829101144_add_pool_types_to_mev_simulation_log.sql  20250830055911_drop_pools_vault_columns.sql  20250911052100_create_pools_v2_varchar_table.sql  20250911052505_drop_old_pools_rename_new.sql  20250911052926_create_mints_v2_varchar_table.sql  20250911053213_drop_old_mints_rename_new.sql  20250911054603_rename_symbol_to_repr_in_mints.sql  20250911055210_drop_data_snapshot_from_pools.sql  20250913043251_update_mev_simulation_log_remove_columns.sql
scripts/: migrate.sh
src/: bot.rs  config.rs  lib.rs  main.rs  pools.rs  refresh.rs  server.rs  transaction.rs
src/arb/: db.rs  mod.rs
src/arb/chain/: account.rs  instruction.rs  ix.rs  message.rs  meta.rs  mod.rs  transaction.rs  tx.rs  tx_parser.rs  types.rs
src/arb/constant/: client.rs  dex_type.rs  dex_type_test.rs  known_pool_program.rs  mev_bot.rs  mint.rs  mod.rs  pool_owner.rs
src/arb/database/: mod.rs  usage_example.rs
src/arb/dex/: any_pool_config.rs  interface.rs  legacy_interface.rs  mod.rs  refined_interface.rs  register.rs  util.rs
src/arb/global/: blockhash.rs  db.rs  db_backup.rs  db_old_seaorm.rs  db_seaorm.rs  mem_pool.rs  mod.rs  rpc.rs  test_db_logic.rs
src/arb/pipeline/: mod.rs
src/arb/pool/: example_mm.rs  interface.rs  meteora_damm_v2.rs  meteora_dlmm.rs  mod.rs  pump_amm.rs  raydium_cpmm.rs  register.rs  util.rs  whirlpool.rs
src/arb/program/: mod.rs  solana_mev_bot.rs
src/arb/repository/: database.rs  manager.rs  mod.rs  pool_repository.rs  traits.rs  transaction.rs  usage_example.rs
src/arb/sdk/: mod.rs  yellowstone.rs
src/arb/strategy/: mod.rs  unmarshal.rs
src/arb/subscriber/: capture_mev_transactions.rs  entry.rs  grpc_subscription.rs  in_mem_pool.rs  mev_bot_subscriber.rs  mod.rs  test.rs  test_db_logic.rs  yellowstone.rs
src/arb/tx/: constants.rs  custom_types.rs  ix.rs  mod.rs  tx_parser.rs  types.rs
src/arb/util/: alias.rs  debug.rs  logging.rs  macros.rs  mod.rs  serde_helpers.rs  sync.rs  tokio_util.rs  worker_runtime.rs
src/constants/: addresses.rs  helpers.rs  look_up_table.rs  mev_bot.rs  mod.rs  utils.rs
src/convention/chain/: account.rs  message.rs  meta.rs  mod.rs  simulation.rs  transaction.rs  types.rs
src/database/columns/: cache_type_column.rs  mod.rs  pool_descriptor.rs  pubkey_type.rs  pubkey_type_string.rs
src/database/kv_cache/: mod.rs  model.rs  repository.rs
src/database/mev_simulation_log/: mod.rs  model.rs  repository.rs
src/database/mint_record/: cache.rs  loader.rs  mod.rs  model.rs  repository.rs
src/database/pool_record/: cache.rs  converter.rs  mod.rs  model.rs  repository.rs
src/dex/: any_pool_config.rs  interface.rs  legacy_interface.rs  mod.rs  pool_checker.rs  pool_fetch.rs
src/dex/meteora/: config.rs  constants.rs  dlmm_info.rs  mod.rs  pool_damm_v2_info.rs  pool_dlmm_info.rs
src/dex/meteora_damm_v2/: config.rs  pool_data.rs
src/dex/meteora_dlmm/: config.rs  mod.rs  pool_data.rs  verification.rs
src/dex/pump/: amm_info.rs  config.rs  init.rs  mod.rs  pool_amm_info.rs
src/dex/pump_amm/: config.rs  mod.rs  pool_data.rs
src/dex/raydium/: config.rs  constants.rs  mod.rs  pool_amm_info.rs  pool_clmm_info.rs  pool_cp_amm_info.rs
src/dex/raydium_cl_amm/: ix_account.rs  mod.rs  pool_data.rs
src/dex/raydium_clmm/: best_effort.rs  config.rs  ix_account.rs  ix_input.rs  mod.rs  pool_data.rs
src/dex/raydium_cpmm/: config.rs  mod.rs  pool_data.rs
src/dex/solfi/: config.rs  constants.rs  mod.rs
src/dex/verification/: common.rs  damm_v2_verification.rs  dlmm_verification.rs  mod.rs  pump_amm_verification.rs  raydium_clmm_verification.rs  raydium_cpmm_verification.rs  whirlpool_verification.rs
src/dex/vertigo/: config.rs  mod.rs
src/dex/whirlpool/: best_effort.rs  config.rs  data.rs  ix_account.rs  ix_input.rs  mod.rs  pool_clmm.rs  pool_data.rs  test.rs
src/global/: mod.rs  wallet.rs
src/global/client/: db.rs
src/global/constant/: mint.rs  mod.rs  token_program.rs
src/global/daemon/: blockhash.rs
src/global/enums/: block_reason.rs  dex_type.rs  direction.rs  step_type.rs
src/global/state/: account_balance_holder.rs  account_data_holder.rs  any_pool_holder.rs  mod.rs  token_balance_holder.rs
src/global/trace/: facade.rs  mod.rs  types.rs
src/legacy_dex/meteora/: config.rs  constants.rs  pool_dlmm_info.rs
src/legacy_dex/pump/: config.rs  constants.rs  mod.rs
src/legacy_dex/raydium/: config.rs  mod.rs  pool_amm_info.rs  pool_clmm_info.rs
src/legacy_dex/solfi/: config.rs  pool_info.rs
src/legacy_dex/vertigo/: config.rs  mod.rs  pool_clmm.rs
src/legacy_dex/whirlpool/: config.rs  mod.rs  pool_clmm.rs
src/pipeline/: mod.rs
src/pipeline/chain_subscriber/: involved_account_subscriber.rs  mod.rs  owner_account_subscriber.rs  registrar.rs
src/pipeline/event_processor/: involved_account_processor.rs  (+4 more)
src/sdk/: yellowstone.rs
src/service/: mod.rs
src/test/: mod.rs  test_init.rs  test_utils.rs
src/util/: alias.rs  debug.rs  list_util.rs  logging.rs  macros.rs  mod.rs  serde_pubkey.rs
web/: README.md  next.config.js  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  providers.tsx
web/components/: BotControls.tsx  ConfigEditor.tsx
(+527 files in other folders)
