[package]
name = "solana-onchain-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "A simple Solana onchain arbitrage bot"
repository = "https://github.com/cetipo/solana-onchain-arbitrage-bot"
license = "MIT"

[dependencies]
# Core Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"

# SPL token support
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
    "no-entrypoint",
] }
mpl-token-metadata = "3.2"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
bincode = "1.3"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
async-trait = "0.1"
rust_decimal = { version = "1.35", features = ["serde", "maths"] }
bs58 = "0.4"
base64 = "0.21"
hex = "0.4"
borsh = "0.10.3"
bytemuck = { version = "1.16.1", features = ["derive"] }
lazy_static = "1.4"

# Command line argument parsing
clap = "3.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

meteora-damm-cpi = { path = "lib/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "lib/meteora-vault", features = ["no-entrypoint"] }
itertools = "0.10.5"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sea-orm = { version = "0.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "postgres-array"] }
sea-query = "0.28"
sea-query-binder = { version = "0.3", features = ["sqlx-postgres"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12.4"
once_cell = "1.21.3"

# gRPC dependencies
tonic = { version = "0.10", features = ["tls", "tls-roots", "transport"] }
tonic-health = "0.10"
prost = "0.12"
tokio-stream = "0.1"
yellowstone-grpc-client = "1.15"
yellowstone-grpc-proto = "1.14"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"
ctor = "0.2"
