[package]
name = "solana-onchain-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "A simple Solana onchain arbitrage bot"
repository = "https://github.com/cetipo/solana-onchain-arbitrage-bot"
license = "MIT"

[dependencies]
# Core Solana dependencies
solana-sdk = "2.2.20"
solana-client = "2.2.20"
solana-program = "2.2.20"
solana-transaction-status = "2.2.20"

# SPL token support
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
mpl-token-metadata = "5.1.1"

# Serialization/deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
bincode = "1.3.3"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"

# HTTP server
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }

# Utilities
anyhow = "1.0.99"
rand = "0.9.2"
rust_decimal = { version = "1.37.2", features = ["serde", "maths"] }
bs58 = "0.5.1"
base64 = "0.22.1"
hex = "0.4.3"
borsh = "1.5.7"
bytemuck = { version = "1.23.2", features = ["derive"] }
dashmap = "6.1.0"
lazy_static = "1.5.0"

# Command line argument parsing
clap = "4.5.46"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

meteora-damm-cpi = { path = "lib/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "lib/meteora-vault", features = ["no-entrypoint"] }
itertools = "0.14.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "postgres-array"] }
sea-query = "0.32.7"
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
parking_lot = "0.12.4"
once_cell = "1.21.3"

# gRPC dependencies
tonic = { version = "0.12.3", features = ["tls-native-roots", "transport"] }
tonic-health = "0.12.3"
tokio-stream = "0.1.17"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"

[dev-dependencies]
serde_json = "1.0.143"
ctor = "0.5.0"
